@@ -1,5 +1,8 @@
 2001-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* lib/Magick++/STL.h (flattenImages): New function to flatten a
+ 	layered image.  Still needs documentation.
+
 	* lib/Montage.cpp (Montage): Montage initial defaults are no
  	longer drawn from ImageInfo.  MontageInfo structure is entirely
  	filled out by updateMontageInfo();
